Fix topbar z-index

--- a/server/public/app.css
+++ b/server/public/app.css
@@ -799,13 +799,13 @@ a:hover {
 		height: 100px;
 		/*border-style: 1px solid rgba(52, 73, 94, 0.15);*/
 		position: absolute;
-		z-index: 100;
 	}
 
 	#section_container > #top > .margin_left,
 	#section_container > #top > .margin_right {
 		width: 30%;
 		display: table-cell;
+		z-index: -1;
 	}
 
 	#section_container > #top > .match_result {
@@ -813,7 +813,8 @@ a:hover {
 		padding-top: 10px;
 		padding-bottom: 10px;
 		background-color: rgba(20, 20, 20,0.8);
-
+		position: relative;
+		z-index: 100;
 	}
 
 	#section_container > #top > .match_result > .coorporation_name,
